@@ -117,10 +117,6 @@ CONFIGURATION
         Set this option to 1 to make A::G show the files timestamp instead
         of the EXIF value for "Picture taken".
 
-    GallerySelectionMode
-        Enable the selection mode. Select images with checkboxes and get a
-        list of filenames.
-
     GalleryEXIFMode
         You can choose how Apache::Gallery should display EXIF info from
         your images.
